#2.3 레고블럭 조립 설명서에 쓰인 표현을 좀 더 단순하게(혹은 올드한 방식으로) 바꿔주는 babel

--- a/wetube_review_one/package.json
+++ b/wetube_review_one/package.json
@@ -17,5 +17,10 @@
   "homepage": "https://github.com/CodeSubSpace/CodeSubSpace#readme",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5"
   }
 }
