--- a/wetube_review_one/package.json
+++ b/wetube_review_one/package.json
@@ -1,9 +1,8 @@
 {
   "name": "wetube_review_one",
   "version": "1.0.0",
-  "description": "Review!",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,11 +15,13 @@
   },
   "homepage": "https://github.com/CodeSubSpace/CodeSubSpace#readme",
   "dependencies": {
+    "@babel/node": "^7.23.9",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5"
-  }
+    "@babel/preset-env": "^7.24.5",
+    "nodemon": "^3.1.0"
+  } 
 }
