#3.0 express package를 이용하여 server 열기(req에 대한 listening 상태)

--- a/wetube_review_one/package.json
+++ b/wetube_review_one/package.json
@@ -2,7 +2,7 @@
   "name": "wetube_review_one",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon --exec babel-node index.js"
+    "dev": "nodemon --exec babel-node src/server.js"
   },
   "repository": {
     "type": "git",
