--- a/wetube_review_one/package.json
+++ b/wetube_review_one/package.json
@@ -16,12 +16,13 @@
   "homepage": "https://github.com/CodeSubSpace/CodeSubSpace#readme",
   "dependencies": {
     "@babel/node": "^7.23.9",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "nodemon": "^3.1.0"
-  } 
+  }
 }
