--- a/wetube_review_one/package.json
+++ b/wetube_review_one/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@babel/node": "^7.23.9",
     "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
